Fix low color contrast in the submissions dropdown on small screens
Accessibility fix:
In the chapter exercise points bar, the links in the submissions
dropdown had too low contrast on small screens.

--- a/assets/sass/legacy/_main.scss
+++ b/assets/sass/legacy/_main.scss
@@ -303,6 +303,11 @@ collapsed due to narrow viewport) */
 .exercise-summary .navbar-nav>.open>a:hover {
     background-color: rgba(0,0,0,0.04);
 }
+@media (max-width: $grid-float-breakpoint-max) {
+	.exercise-summary .navbar-nav .open .dropdown-menu > li > a {
+		color: #555555;
+	}
+}
 .navbar-nav>li>a.file-modal {
     display: inline;
     padding: 0;
